--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -59,7 +59,8 @@
   background-color: #ffdd57;
   color: #333;
   padding: 0.75rem 1.5rem;
-  margin-top: 0.5 rem;
+  margin-top: -0.5rem;
+  margin-bottom: 2rem;
   border-radius: 5px;
   text-decoration: none;
   font-weight: bold;
