--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -69,17 +69,19 @@
   color: var(--button-text-color);
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
-  border: none;
+  border: 1px solid white;
   border-radius: 5px;
   cursor: pointer;
+  margin: auto;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .submit-button:hover {
-  background-color: var(--button-hover-color);
+  background-color: #007bff;
   transform: scale(1.05);
 }
 
+/* Social Links */
 /* Social Links */
 .social-links {
   margin-top: 2rem;
@@ -92,7 +94,8 @@
 }
 
 .social-links a {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   margin: 0 0.5rem;
   font-size: 1rem;
   color: var(--accent-color);
@@ -101,8 +104,13 @@
 }
 
 .social-links a:hover {
-  color: var(--button-hover-color);
+  color: #007bff;
   transform: translateY(-2px);
+}
+
+.social-icon {
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
 }
 
 /* Responsive Design */
