--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -10,7 +10,7 @@
   text-align: center;
   font-size: 2rem;
   margin-bottom: 1.5rem;
-  color: var(--accent-color); /* Use accent color for heading */
+  color: var(--accent-color);
 }
 
 /* Filter Buttons */
@@ -20,8 +20,8 @@
 }
 
 .filters button {
-  background-color: var(--button-background-color); /* Button background */
-  color: var(--button-text-color); /* Button text color */
+  background-color: var(--button-background-color);
+  color: var(--button-text-color);
   border: none;
   padding: 0.5rem 1rem;
   margin: 0 0.5rem;
@@ -32,12 +32,12 @@
 }
 
 .filters button:hover {
-  background-color: var(--button-hover-color); /* Hover state color */
+  background-color: var(--button-hover-color);
   transform: scale(1.05);
 }
 
 .filters button:focus {
-  outline: 2px solid var(--button-hover-color); /* Focus state outline */
+  outline: 2px solid var(--button-hover-color);
 }
 
 /* Project List Grid */
@@ -50,10 +50,10 @@
 
 /* Project Cards */
 .project {
-  background-color: var(--header-background-color); /* Card background */
-  border: 1px solid var(--text-color); /* Border matches text color */
+  background-color: var(--header-background-color);
+  border: 1px solid var(--text-color);
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Slight shadow */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   text-align: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease,
@@ -67,13 +67,13 @@
 }
 
 .project p {
-  color: var(--text-secondary-color); /* Secondary text color */
+  color: var(--text-secondary-color);
   font-size: 1rem;
 }
 
 .project:hover {
   transform: translateY(-10px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Slightly deeper shadow on hover */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
 .project a {
@@ -89,7 +89,7 @@
 }
 
 .project a:hover {
-  background-color: var(--button-hover-color); /* Button hover */
+  background-color: var(--button-hover-color);
 }
 
 /* Responsive Design */
