--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -13,6 +13,7 @@
   background-color: #f5f5f5;
   color: #333;
   transition: background-color 0.3s ease, color 0.3s ease;
+  /* height: 9vh; */
 }
 
 .header.dark {
