--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -4,6 +4,7 @@
   background-color: var(--background-color);
   color: var(--text-color);
   transition: background-color 0.3s ease, color 0.3s ease;
+  animation: fadeInUp 1.5s ease forwards;
 }
 
 .projects-section h2 {
@@ -116,5 +117,16 @@
 
   .project p {
     font-size: 0.9rem;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
