--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -141,3 +141,25 @@
     transform: translateY(0);
   }
 }
+
+.animated-text {
+  margin-bottom: -2rem !important;
+}
+
+.text-type {
+  display: inline-block;
+  white-space: pre-wrap;
+  font-size: 3rem;
+  color: white;
+  font-weight: 620;
+}
+
+.text-type__cursor {
+  margin-left: 0.25rem;
+  display: inline-block;
+  opacity: 1;
+}
+
+.text-type__cursor--hidden {
+  display: none;
+}
